package com.samsung.tcm.exceptions;

public class FilterPatternMismatchException extends Exception{
    public FilterPatternMismatchException(String message) {
        super(message);
    }
}
