package com.samsung.tcm.exceptions;

public class InvalidFormatExpressionException extends Exception {
    public InvalidFormatExpressionException(String message) {
        super(message);
    }
}
