package com.samsung.tcm.exceptions;

public class InvalidHelperStatusException extends Exception {
    public InvalidHelperStatusException(String message) {
        super(message);
    }
}
