package com.samsung.tcm.exceptions;

public class NoMatchingIdentifiersException extends Exception {
    public NoMatchingIdentifiersException(String message) {
        super(message);
    }
}
