package com.samsung.tcm.exceptions;

public class NotSupportException extends Exception {
    public NotSupportException(String message) {
        super(message);
    }
}
