package com.samsung.tcm.exceptions;

public class NotSupportFilterPatternException extends NotSupportException {
    public NotSupportFilterPatternException(String message) {
        super(message);
    }
}
