package com.samsung.tcm.exceptions;

public class NotSupportIdentifierAnalysisException extends NotSupportException {
    public NotSupportIdentifierAnalysisException(String message) {
        super(message);
    }
}
